<resources>
    <string name="app_name" translatable="false">WiseTimer</string>

    <string name="training_desc">You can add, edit and start an already created workout</string>

    <string name="timer_prepare">Prepare</string>
    <string name="timer_prepare_number">Start soon</string>
    <string name="timer_work_time">Work time</string>
    <string name="timer_rest_time">Rest time</string>
    <string name="timer_without_rest">Without rest</string>
    <string name="timer_repeat">Repeat</string>

    <string name="time_min_hint">min</string>
    <string name="timer_pause_button">Pause</string>
    <string name="timer_continue_button">Continue</string>
    <string name="timer_next_interval_hint">Next: %s</string>
    <string name="timer_end_of_workout_hint">End of workout</string>

    /* Training activity and dialog */
    <string name="dialog_training_setting_title">Workout settings</string>
    <string name="dialog_training_create_title">Create workout</string>
    <string name="dialog_training_setting_description">Change the name of the workout or delete it altogether</string>
    <string name="dialog_training_create_description">To create a new workout, enter its name</string>
    <string name="dialog_training_error_hint">Name must contain at least one letter or number</string>
    <string name="dialog_training_name_hint">Enter workout name</string>

    <string name="dialog_interval_setting_title">Interval settings</string>
    <string name="dialog_interval_create_title">Create interval</string>
    <string name="dialog_interval_setting_description">Set the workTime time and restTime time for a given interval</string>
    <string name="dialog_interval_setting_divider" translatable="false">:</string>
    <string name="dialog_interval_setting_repeats">Repeat several times</string>
    <string name="dialog_interval_setting_name">Without name</string>
    <string name="dialog_interval_setting_type">Interval type</string>
    <string name="dialog_interval_setting_name_hint">Enter intervals name</string>

    <string name="training_subtitle">Welcome to</string>
    <string name="training_title" translatable="false">WiseTimer</string>
    <string name="training_sector_title">Workout list</string>

    <string name="number_of_intervals_text">Number of intervals: %1$d</string>

    <string name="delete_training_button">Delete workout</string>
    <string name="save_training_button">Save changes</string>
    <string name="create_training_button">Create workout</string>

    <string name="delete_interval_button">Delete interval</string>
    <string name="save_interval_button">Save interval</string>
    <string name="start_workout_button">Start workout</string>

    <string name="interval_title">Interval List</string>

    <string name="edit_workout_title">Edit workout</string>
    <string name="edit_workout_description">You can change the order of the intervals in the list by dragging the intervals</string>

    <string-array name="type_list">
        <item>With rest</item>
        <item>Without rest</item>
    </string-array>


    <string name="dialog_changelog_title">What\'s new</string>
    <string name="delete_changelog_accept_button">Continue</string>

    <string-array name="dialog_changelog_list">
        <item>Indication of the next interval</item>
        <item>Sorting Intervals</item>
        <item>[Soon] Sound control</item>
    </string-array>

    <string-array name="dialog_changelog_description_list">
        <item>Now you will always be notified of which interval will be next</item>
        <item>Now you can change intervals for more flexible workout customization</item>
        <item>Soon you will be able to control the sound of the timer</item>
    </string-array>
</resources>
