<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dialog_horizontal_padding"
    android:paddingTop="@dimen/dialog_vertical_padding"
    android:paddingEnd="@dimen/dialog_horizontal_padding"
    android:paddingBottom="@dimen/dialog_vertical_padding">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/dialog_training_create_title"
        android:textColor="@color/colorTextHeader"
        android:textSize="@dimen/dialog_header_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialogDescription"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/dialog_training_create_description"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <EditText
        android:id="@+id/etWorkoutName"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/dialog_training_name_hint"
        android:inputType="text|textCapSentences|textNoSuggestions"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogDescription" />

    <TextView
        android:id="@+id/createButton"
        style="@style/CustomDialogButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_training_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorHint" />

    <TextView
        android:id="@+id/errorHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/dialog_training_error_hint"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWorkoutName" />

</androidx.constraintlayout.widget.ConstraintLayout>