<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dialog_horizontal_padding"
    android:paddingTop="@dimen/dialog_vertical_padding"
    android:paddingEnd="@dimen/dialog_horizontal_padding"
    android:paddingBottom="@dimen/dialog_vertical_padding">

    <CheckBox
        android:id="@+id/cbRepeatVisibility"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/colorTint"
        app:layout_constraintEnd_toEndOf="@+id/etRestSeconds"
        app:layout_constraintTop_toBottomOf="@+id/etRepeatsCount" />

    <CheckBox
        android:id="@+id/cbNameVisibility"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/colorTint"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="@+id/etRestSeconds"
        app:layout_constraintTop_toBottomOf="@+id/cbRepeatVisibility" />

    <EditText
        android:id="@+id/etIntervalName"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/dialog_interval_setting_name_hint"
        android:inputType="text|textCapSentences|textNoSuggestions"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <EditText
        android:id="@+id/etWorkMinutes"
        style="@style/CustomEditText"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="0123456789"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_bold"
        android:inputType="textNoSuggestions|number"
        android:maxLength="2"
        android:singleLine="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/work_divider"
        app:layout_constraintTop_toBottomOf="@+id/etIntervalName" />

    <EditText
        android:id="@+id/etWorkSeconds"
        style="@style/CustomEditText"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_bold"
        android:inputType="textNoSuggestions|number"
        android:maxLength="2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/etWorkMinutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etWorkMinutes" />

    <EditText
        android:id="@+id/etRestSeconds"
        style="@style/CustomEditText"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="0123456789"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_bold"
        android:inputType="textNoSuggestions|number"
        android:maxLength="2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWorkSeconds" />

    <EditText
        android:id="@+id/etRestMinutes"
        style="@style/CustomEditText"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_bold"
        android:inputType="textNoSuggestions|number"
        android:maxLength="2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/etRestSeconds"
        app:layout_constraintEnd_toStartOf="@+id/rest_divider"
        app:layout_constraintTop_toTopOf="@+id/etRestSeconds" />

    <EditText
        android:id="@+id/etRepeatsCount"
        style="@style/CustomEditText"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:digits="0123456789"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_bold"
        android:inputType="textNoSuggestions|number"
        android:maxLength="2"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/etRestSeconds"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/etRestMinutes"
        app:layout_constraintTop_toBottomOf="@+id/etRestMinutes" />

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/dialog_interval_setting_title"
        android:textColor="@color/colorTextHeader"
        android:textSize="@dimen/dialog_header_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/work_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/timer_work_time"
        android:textColor="#424242"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/etWorkMinutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etWorkMinutes" />

    <TextView
        android:id="@+id/work_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/dialog_interval_setting_divider"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dialog_header_size"
        app:layout_constraintBottom_toBottomOf="@+id/etWorkMinutes"
        app:layout_constraintEnd_toStartOf="@+id/etWorkSeconds"
        app:layout_constraintTop_toTopOf="@+id/etWorkMinutes"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/rest_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/timer_rest_time"
        android:textColor="#424242"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/etRestMinutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etRestMinutes" />

    <TextView
        android:id="@+id/rest_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_interval_setting_divider"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dialog_header_size"
        app:layout_constraintBottom_toBottomOf="@+id/etRestSeconds"
        app:layout_constraintEnd_toStartOf="@+id/etRestSeconds"
        app:layout_constraintTop_toTopOf="@+id/etRestSeconds" />

    <TextView
        android:id="@+id/deleteButton"
        style="@style/CustomDialogButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/delete_interval_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbNameVisibility" />

    <TextView
        android:id="@+id/saveButton"
        style="@style/CustomDialogButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save_interval_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteButton" />

    <TextView
        android:id="@+id/repeatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/timer_repeat"
        android:textColor="#424242"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etRepeatsCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etRepeatsCount" />

    <TextView
        android:id="@+id/repeat_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/dialog_interval_setting_repeats"
        android:textSize="14sp"
        android:textColor="#424242"
        app:layout_constraintBottom_toBottomOf="@+id/cbRepeatVisibility"
        app:layout_constraintEnd_toStartOf="@+id/cbRepeatVisibility"
        app:layout_constraintStart_toStartOf="@+id/rest_name"
        app:layout_constraintTop_toTopOf="@+id/cbRepeatVisibility" />

    <TextView
        android:id="@+id/name_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/dialog_interval_setting_name"
        android:textSize="14sp"
        android:textColor="#424242"
        app:layout_constraintBottom_toBottomOf="@+id/cbNameVisibility"
        app:layout_constraintEnd_toStartOf="@+id/cbNameVisibility"
        app:layout_constraintStart_toStartOf="@+id/rest_name"
        app:layout_constraintTop_toTopOf="@+id/cbNameVisibility" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/repeatGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cbRepeatVisibility,repeat_description"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>